[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diffbot-python"
version = "0.1.0"
description = "Python client library for the Diffbot APIs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Jerome Choo", email = "jerome@diffbot.com" },
    { name = "Mike Tung", email = "miket@diffbot.com" }
]
keywords = [
    "diffbot",
    "knowledge-graph",
    "web-scraping",
    "extract",
    "crawler",
    "nlp",
    "llm",
    "api-client",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/diffbot/diffbot-python"
Documentation = "https://github.com/diffbot/diffbot-python#readme"
Repository = "https://github.com/diffbot/diffbot-python"
Issues = "https://github.com/diffbot/diffbot-python/issues"

[project.scripts]
db = "diffbot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/diffbot"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
markers = ["live: marks tests as live integration tests requiring a real DIFFBOT_TOKEN"]
addopts = "-m 'not live'"
